# forge

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile  package.json  tsconfig.json
.beads/: config.toml  issues.jsonl  metadata.json
.claude/: settings.json
.claude/plans/claude-code-telemetry/: 2026-04-07-claude-code-otel-mlflow-design.md  2026-04-07-claude-code-otel-mlflow.md
.claude/plans/forge-prod-infra/.feats/: ARCHITECTURE.md  README.md
.claude/plans/forge-resume-browser-extension/: MVP-SPEC.md  SPEC.md  workday.md
.claude/plans/forge-resume-browser-extension/.prompts/: M6.md  M7.md  MVP.md
.claude/plans/forge-resume-browser-extension/phase/: load-op-env-action.md
.claude/plans/forge-resume-browser-extension/phase copy/: M1-firefox-port.md  M2-capture-entry-points.md  M3-parser-foundation.md  M4-workday-dropdown-filling-plan.md  M4-workday-dropdown-filling.md  M5-parser-wiring.md  M6-overlay-answer-bank-plan.md  M6-overlay-answer-bank.md  M7-infrastructure.md  P0-forge-core-extension-cors.md  P1-pure-extraction.md  P2-api-read-only.md  P3-api-write-simple.md  P4-extract-write.md  P5-dedup.md  P6-field-filling-simple.md  P7-fill-profile.md  store-publishing.md
.claude/plans/forge-resume-builder/: CONTINUE.md  PHASE-1.2-RESUME-PROMPT.md  PHASE-2-HELIX-PROMPT.md  PLAN.md  ROADMAP.md
.claude/plans/forge-resume-builder/.bugs/: .scratch.md  bullet-dedup-analysis.md  bullet-skills-rebuild.sql  skill-domains-rebuild.sql  snorkel-resume-alignment.md
.claude/plans/forge-resume-builder/.feats/: data-quality-audit-prompt.md
.claude/plans/forge-resume-builder/.prompts/: PHASE-1.1-RESUME-PROMPT.md  forge-dev-backlog.md  notes-normalization.md  org-address-refactor.md
.claude/plans/forge-resume-builder/.scratch/: TODO.md  browser-automation.md  cfp.md  concepts.md  fdd.md  foo.md  i18n.md  mcp-interface.md  next-session-prompt.md  spec-plan.md
.claude/plans/forge-resume-builder/phase/: 0-risk-gate-and-foundation.md  1-shared-types-and-schema.md  10-schema-evolution.md  100-caldav-integration.md  101-resume-preview-merge.md  102-profile-schema-update.md  11-core-layer-updates.md  12-api-and-sdk-updates.md  13-cli-and-import.md  14-ui-evolution.md  15-chain-graph-and-polish.md  16-schema-migration-003.md  17-editable-domains-and-archetypes.md  18-organization-updates.md  19-resume-ir-and-compilers.md  2-core-data-layer.md  20-resume-renderer-ui.md  2026-04-08-split-handshake-derivation.md  2026-04-14-helix-adapter.md  21-sdk-debug-logging.md  22-component-debug-helpers.md  23-server-structured-logging.md  24-provenance-tooltip-enhancement.md  25-chain-view-edge-interaction.md  26-dnd-role-bullet-add.md  27-resume-sections-schema.md  28-resume-sections-ui.md  29-config-profile.md  3-core-services-and-ai-module.md  30-summaries-entity.md  31-job-descriptions.md  32-nav-restructuring.md  33-chain-view-modal.md  34-summary-templates.md  (+74 more)
.claude/rules/: beads-taxonomy.md  extension-cross-browser.md  resume-database.md  ui-shared-components.md
.claude/serena/: project.yml
.docker/: Dockerfile  compose.yml  justfile
.github/actions/load-op-env/: action.yml  load.mjs
.github/workflows/: extension-publish.yml
crates/forge-ai/: Cargo.toml
crates/forge-ai/src/: jd_parser.rs  lib.rs
crates/forge-ai/src/prompts/: bullet_to_perspective.rs  jd_skill_extraction.rs  mod.rs  source_to_bullet.rs
crates/forge-ai/src/validators/: bullet.rs  mod.rs  perspective.rs  skill_extraction.rs
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: main.rs
crates/forge-core/: Cargo.toml  SPEC.md
crates/forge-core/src/: lib.rs  migrations.rs  util.rs
crates/forge-core/src/types/: common.rs  entities.rs  enums.rs  inputs.rs  ir.rs  mod.rs  skill_graph.rs  tests.rs
crates/forge-mcp/: Cargo.toml
crates/forge-mcp/src/: main.rs
crates/forge-sdk/: Cargo.toml  SPEC.md
crates/forge-sdk/src/: forge.rs  lib.rs
crates/forge-sdk/src/db/: bullet_repo.rs  contact_repo.rs  jd_repo.rs  migrate.rs  mod.rs  note_repo.rs  organization_repo.rs  perspective_repo.rs  profile_repo.rs  resume_repo.rs  skill_repo.rs  source_repo.rs  summary_repo.rs
crates/forge-sdk/src/db/backends/: mod.rs  sqlite.rs
crates/forge-sdk/src/db/stores/: address.rs  answer_bank.rs  archetype.rs  bullet.rs  campus.rs  certification.rs  contact.rs  credential.rs  derivation.rs  domain.rs  industry.rs  jd.rs  mod.rs  note.rs  organization.rs  perspective.rs  profile.rs  resume.rs  role_type.rs  skill.rs  skill_graph.rs  source.rs  summary.rs
crates/forge-sdk/src/services/: audit_service.rs  bullet_service.rs  compiler_service.rs  contact_service.rs  export_service.rs  integrity_service.rs  jd_service.rs  mod.rs  note_service.rs  organization_service.rs  perspective_service.rs  profile_service.rs  resume_service.rs  review_service.rs  skill_service.rs  source_service.rs  summary_service.rs
crates/forge-server/: Cargo.toml
crates/forge-server/src/: error.rs  main.rs
crates/forge-server/src/routes/: addresses.rs  answer_bank.rs  archetypes.rs  audit.rs  bullets.rs  campuses.rs  certifications.rs  contacts.rs  credentials.rs  derivations.rs  domains.rs  export.rs  health.rs  industries.rs  integrity.rs  job_descriptions.rs  mod.rs  notes.rs  organizations.rs  perspectives.rs  profile.rs  resumes.rs  review.rs  role_types.rs  skills.rs  sources.rs  summaries.rs  supporting.rs
crates/forge-wasm/: .gitignore  Cargo.toml  package.json
crates/forge-wasm/examples/browser-smoke/: .gitignore  README.md  index.html  main.js  package.json  vite.config.js
crates/forge-wasm/src/: adapter.rs  database.rs  error.rs  lib.rs  migrate.rs  wa_sqlite.rs
crates/forge-wasm/src/alignment/: config.rs  embedding_nn.rs  engine.rs  level.rs  match_types.rs  mod.rs  reports.rs  result.rs  store.rs  test_fixtures.rs  wasm_bindings.rs
crates/forge-wasm/src/skill_graph/: hnsw.rs  mod.rs  runtime.rs  wasm_bindings.rs
crates/forge-wasm/src/stores/: mod.rs  skill.rs
data/: justfile
docs/: .gitignore
docs/src/architecture/: README.md  seams.md
docs/src/migrations/: mvp-2.0-browser-first.md
(+289 files in other folders)
