[package]
name = "forge-ai"
version = "0.1.0"
edition = "2021"
description = "LLM client, prompts, and validation for Forge"

[dependencies]
forge-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
