[package]
name = "forge-ai"
version = "0.1.0"
edition = "2021"
description = "LLM prompts, response validation, and text analysis for Forge"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
