[package]
name = "forge-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP tool registry server for Forge"

[[bin]]
name = "forge-mcp"
path = "src/main.rs"

[dependencies]
forge-sdk = { workspace = true }
forge-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
figment = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
