[package]
name = "forge-sdk"
version = "0.1.0"
edition = "2021"
description = "Repositories, services, and IR compiler for Forge"

[dependencies]
forge-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
