[package]
name = "forge-wasm"
version = "0.1.0"
edition = "2021"
description = "Forge browser-side data layer (Rust → WASM). Survives Svelte → Tauri → Dioxus migrations."

# `cdylib` produces the .wasm artifact that wasm-pack post-processes into JS bindings.
# `rlib` keeps the crate usable from native test harnesses and from future
# Tauri / Dioxus consumers that link against it natively.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# `default-features = false` drops the rusqlite-bound `Database` variant of
# ForgeError so forge-core compiles to wasm32-unknown-unknown without trying
# to bundle a C SQLite library. The `WasmDatabase(String)` variant used to
# surface wa-sqlite JS-boundary errors is always-present in forge-core
# (no feature gate) so consumers don't need a passthrough feature to
# handle it in exhaustive matches.
forge-core = { workspace = true, default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# WASM/JS interop
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"  # required for `async fn` extern blocks (Promise unwrapping)
js-sys = "0.3"
console_error_panic_hook = "0.1"
petgraph = { version = "0.8.3", default-features = false }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  # OPFS / wa-sqlite features will be added by the binding successor task.
]

# Native test harness — wasm-bindgen-test is layered on for in-browser tests
# in the test-harness successor task.
[dev-dependencies]
wasm-bindgen-test = "0.3"
